--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "devDependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "jest": "^27.0.6"
   }
 }
